# prog

./: .gitignore  CMakeLists.txt  Makefile  README.md
scripts/: format.sh
works/big-integer/: CMakeLists.txt
works/big-integer/src/: CMakeLists.txt  big_integer.cpp  big_integer.hpp  main.cpp
works/big-integer/test/: CMakeLists.txt  big_integer_test.cpp
