project(hse_practice)

cmake_minimum_required(VERSION 3.16)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_compile_options(-ggdb3)

set(ADVICE "Better use \"make cmake-<hw-name>\" or \"make cmake-all\" to build all projects")

MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
      LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

add_subdirectory(third_party/googletest)
SUBDIRLIST(SUBDIRS ${CMAKE_SOURCE_DIR}/works)
#if (NOT DEFINED TARGET_PROJECTS)
  foreach(subdir ${SUBDIRS})
    include_directories(works/${subdir}/src)
    add_subdirectory(works/${subdir})
  endforeach()
  #  message(FATAL_ERROR "Don't use cmake explicitly.\n"${ADVICE})
#elseif(${TARGET_PROJECTS} STREQUAL "!!!!")
  #message(FATAL_ERROR "Something went wrong... Maybe you run \"make cmake\". It is "
    #" internal command.\n" ${ADVICE})
#else()
  #message("Cmake project : " ${TARGET_PROJECTS})

  #include_directories(works/big-integer/src)
  #include_directories(works/expr-calculator/src)

  #add_subdirectory(works/big-integer)
  #add_subdirectory(${TARGET_PROJECTS})
#endif()
